# Advanced-SNN

./: Cargo.toml  README.md  build.rs
docs/: roihu.md
examples/: brain_blob.toml  brain_learning.toml  small_cpu.toml  small_gpu_dense.toml  small_gpu_event.toml
kernels/: event_snn.cu  lif_dense.cu
scripts/: run_brain_learning_small.sh  run_brain_small.sh  run_cpu_small.sh  run_gpu_dense_small.sh  run_gpu_event_small.sh
scripts/roihu/: run_visible_gpu_rank.sh  submit_validation.sh  validate_big_update.sbatch  validate_gpu_multi.sbatch  validate_gpu_single.sbatch
src/: cli.rs  config.rs  learning.rs  lib.rs  main.rs  metrics.rs  snapshot.rs  types.rs
src/brain/: mod.rs
src/cpu/: mod.rs  reference.rs
src/distributed/: cpu.rs  graph.rs  mod.rs  partition.rs  runtime.rs
src/gpu/: buffers.rs  cuda.rs  dense.rs  device.rs  event.rs  mod.rs
src/graph/: csr.rs  mod.rs  random.rs
src/neuron/: lif.rs  mod.rs  state.rs
tests/: cpu_gpu_match.rs  cpu_reference.rs
tools/: live_brain_server.py
viewer/: README.md  app.js  index.html  sample.ndjson  styles.css
