[package]
name = "advanced-snn"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
cust = { version = "0.3.2", optional = true }
mpi = { version = "0.8", optional = true }

[features]
default = []
cuda = ["cust"]
mpi = ["dep:mpi"]
distributed = ["mpi"]
